# jettyd-firmware-template

./: .gitignore  CLAUDE.md  CMakeLists.txt  FLASH.md  Makefile  QUICKSTART.md  README.md  build.py  device.yaml  flash.html  manifest.json  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml  firmware-release.yml  notify-quickstart-change.yml  pages.yml
main/: CMakeLists.txt  driver_registry.c  driver_requires.cmake  main.c
